--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             </nav>
             <main class="main-content">
                 <div class="video"><video src="/movies/Technology_digital_background1_Trim.mp4" autoplay muted loop></video></div>
+                <div class="profile">
+                    <img src="/images/profile_pic.jpg">
+                </div>
                 <article class="about-me">
                     <h2>Hey! My name is Ye, nice to meet you.</h2>
                     <p>I'm currently on my journey to be a web developer/software engineer. I'm based in Los Angeles, U.S.
@@ -31,10 +34,32 @@
                         at UCLA, and I've always been good at problem solving
                     </p>
                 </article>
+                <section class="skills">
+
+                </section>
                 <section class="projects" id="project">
-                    <div><img src="https://picsum.photos/200/300"></div>
-                    <div><img src="https://picsum.photos/seed/random/200/300"></div>
-                    <div><img src="https://picsum.photos/seed/two/200/300"></div>
+                    <div class="project-row1">
+                        <div>
+                            <img class="project-photo" src="https://picsum.photos/150/150">
+                            <p>Project Name 1</p>
+                        </div>
+                        <div>
+                            <img src="https://picsum.photos/seed/random/150/150">
+                            <p>Project Name 2</p>
+                        </div>
+                    </div>
+                    <div class="project-row2">
+                        <div>
+                            <img src="https://picsum.photos/seed/two/150/150">
+                            <P>Project Name 3</P>
+                        </div>
+                        <div>
+                            <img src="https://picsum.photos/seed/three/150/150">
+                            <p>Project Name 4</p>
+                        </div>
+                    </div>
+                    
+                </section>
                 </section>
             </main>
             <footer id="footer">
