--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="container" id="home">
+        <div class="main-container" id="home">
             <nav class="nav-bar">
                 <section>
                     <i class="fas fa-user-secret fa-3x left-icon"></i>
@@ -27,17 +27,47 @@
                 <div class="profile">
                     <img src="/images/profile_pic.jpg">
                 </div>
-                <article class="about-me">
-                    <h2>Hey! My name is Ye, nice to meet you.</h2>
+                <article class="intro">
+                    <h3>Hi, I am Ye. Nice to meet you. I'm a web developer & software engineer based in LA.</h3>
                     <p>I'm currently on my journey to be a web developer/software engineer. I'm based in Los Angeles, U.S.
-                        So far, I've been enjoying what I'm learning/doing here at GA academy. I studied physical chemistry
-                        at UCLA, and I've always been good at problem solving
+                        So far, I've been enjoying what I'm learning/doing here at GA academy.
                     </p>
                 </article>
-                <section class="skills">
-
-                </section>
-                <section class="projects" id="project">
+                <div id="skill-text">Skills</div>
+                <div class="container skills">
+                    <div>
+                        <div class="skill-icon">
+                            <i class="fab fa-html5 fa-5x"></i>
+                            <p>HTML5</p>
+                        </div>
+                        <div class="skill-icon">
+                            <i class="fab fa-css3-alt fa-5x"></i>
+                            <p>CSS3</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="skill-icon">
+                            <i class="fab fa-js-square fa-5x"></i>
+                            <p>Java Script</p>
+                        </div>
+                        <div class="skill-icon">
+                            <img id="jquery-icon" src="./images/jquery.png">
+                            <p>jquery</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="skill-icon">
+                            <i class="fab fa-python fa-5x"></i>
+                            <p>Python</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-me">
+                    <h3>About Me</h3>
+                    <p>Blah Blah Blah</p>
+                </div>
+                <section class="projects">
+                    <div class="project-text">Projects</div>
                     <div class="project-row1">
                         <div>
                             <img class="project-photo" src="https://picsum.photos/150/150">
