--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
                     </div>
                     <div class="project-row1">
                         <div>
-                            <img class="project-photo" src="https://picsum.photos/150/150">
+                            <a href="#"><img class="project-photo" src="https://picsum.photos/seed/one/150/150"></a>
                             <p>Project Name 1</p>
                         </div>
                         <div>
-                            <img src="https://picsum.photos/seed/random/150/150">
+                            <a><img class="project-photo" src="https://picsum.photos/seed/two/150/150"></a>
                             <p>Project Name 2</p>
                         </div>
                     </div>
                     <div class="project-row2">
                         <div>
-                            <img src="https://picsum.photos/seed/two/150/150">
+                            <a><img class="project-photo" src="https://picsum.photos/seed/three150/150"></a>
                             <P>Project Name 3</P>
                         </div>
                         <div>
-                            <img src="https://picsum.photos/seed/three/150/150">
+                            <a><img class="project-photo" src="https://picsum.photos/seed/four/150/150"></a>
                             <p>Project Name 4</p>
                         </div>
                     </div>
