--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ye Aung</title>
+        <link rel="icon" href="/images/user-icon.png">
+        <title>Ye Aung | Dev & SEI</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-        <link href="style.css" rel="stylesheet" type="text/css">
-        <link href="desktop.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="desktop.css" type="text/css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container" id="home">
             <nav class="nav-bar">
                 <section>
-                    <a href="#home"><i class="fas fa-user-secret fa-3x left-icon"></i></a>
+                    <a href="#home"><i class="fas fa-home fa-3x left-icon"></i></a>
                     <i class="fas fa-bars fa-3x right-icon toggle-button"></i>
                     <i class="fas fa-skull-crossbones fa-3x cross-icon toggle-button"></i>
                 </section>
