--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <main class="main-content">
                 <div class="video"><video src="/movies/Technology_digital_background1_Trim.mp4" autoplay muted loop></video></div>
                 <div class="profile">
-                    <img src="/images/profile_pic.jpg">
+                    <img src="/images/profile_pic3.jpg">
                 </div>
                 <article class="intro">
                     <h3>Hi, I am Ye. Nice to meet you. I'm a web developer & software engineer based in LA.</h3>
@@ -59,7 +59,7 @@
                         </div>
                         <div>
                             <img id="jquery-icon" src="./images/jquery.png">
-                            <p>jquery</p>
+                            <p>jQuery</p>
                         </div>
                     </div>
                     <div>
@@ -92,11 +92,11 @@
                     </div>
                     <div class="project-row1">
                         <div>
-                            <a href="#"><img class="project-photo" src="https://picsum.photos/seed/one/150/150"></a>
-                            <p>Project Name 1</p>
+                            <a href="https://poppan2.github.io/todo-list/" target="_blank"><img class="project-photo" id="project-one" src="/images/to-do-list.JPG"></a>
+                            <p>ToDo List</p>
                         </div>
                         <div>
-                            <a><img class="project-photo" src="https://picsum.photos/seed/two/150/150"></a>
+                            <a><img class="project-photo" id="project-two" src="/images/fashion_photo.jpg"></a>
                             <p>Project Name 2</p>
                         </div>
                     </div>
