--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="stylesheet" href="desktop.css" type="text/css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js" integrity="sha512-zuZ5wVszlsRbRF/vwXD0QS/tHzBYHFzCD/BT0lI3yrWhNZFWDkkF3KPEY//WTanqxwPdZkskQ+xZo0rnfHBc5A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
     <body>
         <div class="container" id="home">
+            <!-- Nav Bar -->
             <nav class="nav-bar">
                 <section>
                     <a href="#home"><i class="fas fa-home fa-3x left-icon"></i></a>
@@ -25,17 +27,21 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            <!-- Main Content -->
             <main class="main-content">
-                <div class="video"><video src="/movies/Technology_digital_background1_Trim.mp4" autoplay muted loop></video></div>
+                <div class="animation"></div>
                 <div class="profile">
                     <img src="/images/profile_pic3.jpg">
                 </div>
+
                 <article class="intro">
                     <h3>Hi, I am Ye. Nice to meet you. I'm a web developer & software engineer based in LA.</h3>
                     <p>I'm currently on my journey to be a web developer/software engineer. I love building stuff.
                         So far, I've been enjoying what I'm learning/doing here at GA academy.
                     </p>
                 </article>
+
+                <!-- Skill Section -->
                 <div class="skill-set">
                     <div class="two-lines"></div>
                     <div id="skill">Skills</div>
@@ -73,6 +79,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- About Section -->
                 <div class="about-me" id="about">
                     <div class="aboutMe">
                         <div class="three-lines"></div>
@@ -84,23 +91,28 @@
                         engineer and learn, grow, and hone my coding skills. 
                     </p>
                 </div>
+                <!-- Projects Section -->
                 <section class="projects" id="project">
                     <div class="project">
                         <div class="four-lines"></div>
                         <div class="project-text">Projects</div>
                         <div class="four-lines"></div>
                     </div>
-                    <div class="project-row1">
+                    <div class="project-row-one">
                         <div>
                             <a href="https://poppan2.github.io/todo-list/" target="_blank"><img class="project-photo" id="project-one" src="/images/to-do-list.JPG"></a>
                             <p>ToDo List</p>
                         </div>
                         <div>
-                            <a><img class="project-photo" id="project-two" src="/images/fashion_photo.jpg"></a>
-                            <p>Project Name 2</p>
+                            <a href="https://poppan2.github.io/fashin-blog/" target="_blank"><img class="project-photo" id="project-two" src="/images/fashion_photo.jpg"></a>
+                            <p>Fashin Blog HW</p>
+                        </div>
+                        <div>
+                            <a href="https://poppan2.github.io/random-imager/" target="_blank"><img class="project-photo" id="project-two" src="images/random_imager.JPG"></a>
+                            <p>Random Imager</p>
                         </div>
                     </div>
-                    <div class="project-row2">
+                    <div class="project-row-two">
                         <div>
                             <a><img class="project-photo" src="https://picsum.photos/seed/three150/150"></a>
                             <P>Project Name 3</P>
@@ -109,18 +121,21 @@
                             <a><img class="project-photo" src="https://picsum.photos/seed/four/150/150"></a>
                             <p>Project Name 4</p>
                         </div>
+                        <div>
+                            <a><img class="project-photo" src="https://picsum.photos/seed/two/150/150"></a>
+                            <p>Project Name 5</p>
+                        </div>
                     </div>
-                    
-                </section>
                 </section>
             </main>
+            <!-- footer -->
             <footer id="footer">
                 <div class="contact-me" id="contact">
                     <p class="contact-text">Please contact me at</p>
                     <p class="contact-text">ye_aung94@yahoo.com</p>
                 </div>
                 <div class="social-icons">
-                    <i class="fab fa-github fa-3x icon" ></i>
+                    <a href="https://github.com/poppan2?tab=repositories" target="_blank"><i class="fab fa-github fa-3x icon" ></i></a>
                     <i class="fab fa-instagram fa-3x icon"></i>
                     <i class="fab fa-twitter fa-3x icon"></i>
                     <i class="fas fa-envelope fa-3x icon"></i>
