--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <!-- Nav Bar -->
             <nav class="nav-bar">
                 <section>
-                    <a href="#home"><i class="fas fa-home fa-3x left-icon"></i></a>
-                    <i class="fas fa-bars fa-3x right-icon toggle-button"></i>
-                    <i class="fas fa-skull-crossbones fa-3x cross-icon toggle-button"></i>
+                    <a href="#home"><i class="fas fa-home fa-2x home-icon"></i></a>
+                    <i class="fas fa-bars fa-2x hamburger-icon"></i>
+                    <i class="fas fa-skull-crossbones fa-2x cross-icon"></i>
                 </section>
                 <ul id="lists">
                     <li><a href="#skill">Skills</a></li>
