--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
                 <article class="intro">
                     <h3>Hi, I am Ye. Nice to meet you. I'm a web developer & software engineer based in LA.</h3>
-                    <p>I'm currently on my journey to be a web developer/software engineer. I love building stuff.
-                        So far, I've been enjoying what I'm learning/doing here at GA academy.
+                    <p>I'm currently on my journey to be a web developer/software engineer. I enjoy building stuff such as websites, apps, simulations etc...
                     </p>
                 </article>
 
@@ -86,7 +85,7 @@
                         <div id="about-me">about</div>
                         <div class="three-lines"></div>
                     </div>
-                    <p>I've always been interested in problem solving which is why I studied physical chemistry as an undergraduate.
+                    <p>I'm very curous and passionate about software, hardware & problem solving in general. Before my Software Engineering career path, I was studying physical chemistry, and obtained a B.S. degree.
                         I truely enjoy writing codes, being creative with it. I am also on my journey to dive deep into being a sofrware
                         engineer and learn, grow, and hone my coding skills. 
                     </p>
