--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Ye Aung | Dev & SEI</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="tablet.css" type="text/css">
         <link rel="stylesheet" href="desktop.css" type="text/css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js" integrity="sha512-zuZ5wVszlsRbRF/vwXD0QS/tHzBYHFzCD/BT0lI3yrWhNZFWDkkF3KPEY//WTanqxwPdZkskQ+xZo0rnfHBc5A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -33,7 +34,7 @@
                 <div class="profile">
                     <img src="/images/profile_pic3.jpg">
                 </div>
-
+                
                 <article class="intro">
                     <h3>Hi, I am Ye. Nice to meet you. I'm a web developer & software engineer based in LA.</h3>
                     <p>I'm currently on my journey to be a web developer/software engineer. I enjoy building stuff such as websites, apps, simulations etc...
