--- a/index.html
+++ b/index.html
@@ -100,29 +100,29 @@
                     </div>
                     <div class="project-row-one">
                         <div>
-                            <a href="https://poppan2.github.io/todo-list/" target="_blank"><img class="project-photo" id="project-one" src="/images/to-do-list.JPG"></a>
+                            <a href="https://poppan2.github.io/todo-list/" target="_blank"><img class="project-photo moveRight" id="project-one" src="/images/to-do-list.JPG"></a>
                             <p>ToDo List</p>
                         </div>
                         <div>
-                            <a href="https://poppan2.github.io/fashin-blog/" target="_blank"><img class="project-photo" id="project-two" src="/images/fashion_photo.jpg"></a>
+                            <a href="https://poppan2.github.io/fashin-blog/" target="_blank"><img class="project-photo moveUp" id="project-two" src="/images/fashion_photo.jpg"></a>
                             <p>Fashin Blog HW</p>
                         </div>
                         <div>
-                            <a href="https://poppan2.github.io/random-imager/" target="_blank"><img class="project-photo" id="project-two" src="images/random_imager.JPG"></a>
+                            <a href="https://poppan2.github.io/random-imager/" target="_blank"><img class="project-photo moveLeft" id="project-three" src="images/random_imager.JPG"></a>
                             <p>Random Imager</p>
                         </div>
                     </div>
                     <div class="project-row-two">
                         <div>
-                            <a><img class="project-photo" src="https://picsum.photos/seed/three150/150"></a>
+                            <a><img class="project-photo moveRight" src="https://picsum.photos/seed/three150/150"></a>
                             <P>Project Name 3</P>
                         </div>
                         <div>
-                            <a><img class="project-photo" src="https://picsum.photos/seed/four/150/150"></a>
+                            <a><img class="project-photo moveUp" src="https://picsum.photos/seed/four/150/150"></a>
                             <p>Project Name 4</p>
                         </div>
                         <div>
-                            <a><img class="project-photo" src="https://picsum.photos/seed/two/150/150"></a>
+                            <a><img class="project-photo moveLeft" src="https://picsum.photos/seed/two/150/150"></a>
                             <p>Project Name 5</p>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="social-icons">
                     <a href="https://github.com/poppan2?tab=repositories" target="_blank"><i class="fab fa-github fa-3x icon" ></i></a>
-                    <i class="fab fa-instagram fa-3x icon"></i>
+                    <i class="fab fa-linkedin fa-3x icon"></i>
                     <i class="fab fa-twitter fa-3x icon"></i>
                     <i class="fas fa-envelope fa-3x icon"></i>
                 </div>
