add link to linked in and removed twitter and email

--- a/index.html
+++ b/index.html
@@ -136,9 +136,7 @@
                 </div>
                 <div class="social-icons">
                     <a href="https://github.com/poppan2?tab=repositories" target="_blank"><i class="fab fa-github fa-3x icon" ></i></a>
-                    <i class="fab fa-linkedin fa-3x icon"></i>
-                    <i class="fab fa-twitter fa-3x icon"></i>
-                    <i class="fas fa-envelope fa-3x icon"></i>
+                    <a href="https://www.linkedin.com/in/yeaung94/" target="_blank"><i class="fab fa-linkedin fa-3x icon"></i></a>
                 </div>
             </footer>
         </div>
