--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
                     </div>
                     <div class="project-row-two">
                         <div>
-                            <a><img class="project-photo moveRight" src="https://picsum.photos/seed/three150/150"></a>
-                            <P>Project Name 3</P>
+                            <a href="https://poppan2.github.io/final-fantasy-databse/" target="_blank"><img class="project-photo moveRight" src="/images/ff-logo.png"></a>
+                            <P>Final Fantasy Database</P>
                         </div>
                         <div>
-                            <a><img class="project-photo moveUp" src="https://picsum.photos/seed/four/150/150"></a>
-                            <p>Project Name 4</p>
+                            <a><img class="project-photo moveUp" src="/images/pokemon-project-react.JPG"></a>
+                            <p>Pokemon Cards</p>
                         </div>
                         <div>
                             <a><img class="project-photo moveLeft" src="https://picsum.photos/seed/two/150/150"></a>
