--- a/index.html
+++ b/index.html
@@ -1,145 +1,268 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="/images/user-icon.png">
-        <title>Ye Aung | Dev & SEI</title>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css" type="text/css">
-        <link rel="stylesheet" href="tablet.css" type="text/css">
-        <link rel="stylesheet" href="desktop.css" type="text/css">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js" integrity="sha512-zuZ5wVszlsRbRF/vwXD0QS/tHzBYHFzCD/BT0lI3yrWhNZFWDkkF3KPEY//WTanqxwPdZkskQ+xZo0rnfHBc5A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    </head>
-    <body>
-        <div class="container" id="home">
-            <!-- Nav Bar -->
-            <nav class="nav-bar">
-                <section>
-                    <a href="#home"><i class="fas fa-home fa-2x home-icon"></i></a>
-                    <i class="fas fa-bars fa-2x hamburger-icon"></i>
-                    <i class="fas fa-skull-crossbones fa-2x cross-icon"></i>
-                </section>
-                <ul id="lists">
-                    <li><a href="#skill">Skills</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#project">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-            <!-- Main Content -->
-            <main class="main-content">
-                <div class="animation"></div>
-                <div class="profile">
-                    <img src="/images/profile_pic3.jpg">
-                </div>
-                
-                <article class="intro">
-                    <h3>Hi, I am Ye. Nice to meet you. I'm a web developer & software engineer based in LA.</h3>
-                    <p>I'm currently on my journey to be a web developer/software engineer. I enjoy building stuff such as websites, apps, simulations etc...
-                    </p>
-                </article>
-
-                <!-- Skill Section -->
-                <div class="skill-set">
-                    <div class="two-lines"></div>
-                    <div id="skill">Skills</div>
-                    <div class="two-lines"></div>
-                </div>
-                <div class="skills">
-                    <div>
-                        <div>
-                            <i class="fab fa-html5 fa-5x skill-icon"></i>
-                            <p>HTML5</p>
-                        </div>
-                        <div>
-                            <i class="fab fa-css3-alt fa-5x skill-icon"></i>
-                            <p>CSS3</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <i class="fab fa-js-square fa-5x skill-icon"></i>
-                            <p>Java Script</p>
-                        </div>
-                        <div>
-                            <img id="jquery-icon" src="./images/jquery.png">
-                            <p>jQuery</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <i class="fab fa-python fa-5x skill-icon"></i>
-                            <p>Python</p>
-                        </div>
-                        <div>
-                            <i class="fab fa-github fa-5x skill-icon"></i>
-                            <p>GitHub</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- About Section -->
-                <div class="about-me" id="about">
-                    <div class="aboutMe">
-                        <div class="three-lines"></div>
-                        <div id="about-me">about</div>
-                        <div class="three-lines"></div>
-                    </div>
-                    <p>I'm very curous and passionate about software, hardware & problem solving in general. Before my Software Engineering career path, I was studying physical chemistry, and obtained a B.S. degree.
-                        I truely enjoy writing codes, being creative with it. I am also on my journey to dive deep into being a sofrware
-                        engineer and learn, grow, and hone my coding skills. 
-                    </p>
-                </div>
-                <!-- Projects Section -->
-                <section class="projects" id="project">
-                    <div class="project">
-                        <div class="four-lines"></div>
-                        <div class="project-text">Projects</div>
-                        <div class="four-lines"></div>
-                    </div>
-                    <div class="project-row-one">
-                        <div>
-                            <a href="https://poppan2.github.io/todo-list/" target="_blank"><img class="project-photo moveRight" id="project-one" src="/images/to-do-list.JPG"></a>
-                            <p>ToDo List</p>
-                        </div>
-                        <div>
-                            <a href="https://poppan2.github.io/fashin-blog/" target="_blank"><img class="project-photo moveUp" id="project-two" src="/images/fashion_photo.jpg"></a>
-                            <p>Fashin Blog HW</p>
-                        </div>
-                        <div>
-                            <a href="https://poppan2.github.io/random-imager/" target="_blank"><img class="project-photo moveLeft" id="project-three" src="images/random_imager.JPG"></a>
-                            <p>Random Imager</p>
-                        </div>
-                    </div>
-                    <div class="project-row-two">
-                        <div>
-                            <a href="https://poppan2.github.io/final-fantasy-databse/" target="_blank"><img class="project-photo moveRight" src="/images/ff-logo.png"></a>
-                            <P>Final Fantasy Database</P>
-                        </div>
-                        <div>
-                            <a><img class="project-photo moveUp" src="/images/pokemon-project-react.JPG"></a>
-                            <p>Pokemon Cards</p>
-                        </div>
-                        <div>
-                            <a><img class="project-photo moveLeft" src="https://picsum.photos/seed/two/150/150"></a>
-                            <p>Project Name 5</p>
-                        </div>
-                    </div>
-                </section>
-            </main>
-            <!-- footer -->
-            <footer id="footer">
-                <div class="contact-me" id="contact">
-                    <p class="contact-text">Please contact me at</p>
-                    <p class="contact-text">ye_aung94@yahoo.com</p>
-                </div>
-                <div class="social-icons">
-                    <a href="https://github.com/poppan2?tab=repositories" target="_blank"><i class="fab fa-github fa-3x icon" ></i></a>
-                    <a href="https://www.linkedin.com/in/yeaung94/" target="_blank"><i class="fab fa-linkedin fa-3x icon"></i></a>
-                </div>
-            </footer>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/images/icons/user-icon.png" />
+    <title>Ye Aung | Dev & SEI</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./styles/style.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/tablet.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/desktop.css" type="text/css" />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"
+      integrity="sha512-zuZ5wVszlsRbRF/vwXD0QS/tHzBYHFzCD/BT0lI3yrWhNZFWDkkF3KPEY//WTanqxwPdZkskQ+xZo0rnfHBc5A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script type="module" src="./js/main.js"></script>
+  </head>
+  <body>
+    <div class="container" id="home">
+      <!-- Nav Bar -->
+      <nav class="nav-bar">
+        <section>
+          <a href="#home"><i class="fas fa-home fa-2x home-icon"></i></a>
+          <i class="fas fa-bars fa-2x hamburger-icon"></i>
+          <i class="fas fa-skull-crossbones fa-2x cross-icon"></i>
+        </section>
+        <ul id="lists">
+          <li><a href="#skill">Skills</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- Main Content -->
+      <div id="scene-container"></div>
+      <main class="main-content animation">
+        <div class="profile">
+          <img src="/images/profile_pic3.jpg" />
+          <article class="intro">
+            <h3>Hi, I am Ye. A Web Developer & Software Engineer.</h3>
+          </article>
         </div>
-        <script src="script.js"></script>
-    </body>
+
+        <!-- Skill Section -->
+        <div class="skill-set">
+          <div class="two-lines"></div>
+          <div id="skill">Skills</div>
+          <div class="two-lines"></div>
+        </div>
+        <div class="skills">
+          <div>
+            <div>
+              <i class="fab fa-html5 fa-3x skill-icon"></i>
+              <p>HTML5</p>
+            </div>
+            <div>
+              <i class="fab fa-css3-alt fa-3x skill-icon"></i>
+              <p>CSS3</p>
+            </div>
+            <div>
+              <i class="fab fa-react fa-3x skill-icon"></i>
+              <p>React</p>
+            </div>
+          </div>
+          <div>
+            <div>
+              <i class="fab fa-js-square fa-3x skill-icon"></i>
+              <p>Java Script</p>
+            </div>
+            <div>
+              <img
+                id="jquery-icon"
+                src="./images/icons/jquery.png"
+                class="img-icon"
+              />
+              <p>jQuery</p>
+            </div>
+            <div>
+              <img
+                id="mongoDB-icon"
+                src="./images/icons/mongoDB.png"
+                class="img-icon"
+              />
+              <p>mongoDB</p>
+            </div>
+          </div>
+          <div>
+            <div>
+              <i class="fab fa-python fa-3x skill-icon"></i>
+              <p>Python</p>
+            </div>
+            <div>
+              <i class="fab fa-github fa-3x skill-icon"></i>
+              <p>GitHub</p>
+            </div>
+            <div>
+              <img
+                id="postgresql-icon"
+                src="./images/icons/postgresql.png"
+                class="img-icon"
+              />
+              <p>PostgreSQL</p>
+            </div>
+          </div>
+        </div>
+        <!-- About Section -->
+        <div class="about-me" id="about">
+          <div class="aboutMe">
+            <div class="three-lines"></div>
+            <div id="about-me">about</div>
+            <div class="three-lines"></div>
+          </div>
+          <p>
+            I’m a passionate developer based in L.A. . I believe in the best
+            user experience. Being creative and providing the best service to
+            the customers is something I take pride in. I enjoy working with
+            others, and believe in being a team player. Coming from a physical
+            chemistry background has provided me with complex problem solving
+            skills, and critical thinking skills.
+          </p>
+        </div>
+        <!-- Projects Section -->
+        <section class="projects" id="project">
+          <div class="project">
+            <div class="four-lines"></div>
+            <div class="project-text">Projects</div>
+            <div class="four-lines"></div>
+          </div>
+          <div class="project-row-one">
+            <div>
+              <div class="img-container">
+                <a href="https://poppan2.github.io/todo-list/" target="_blank"
+                  ><img
+                    class="project-photo moveRight to-do-list-photo"
+                    id="project-one"
+                    src="./images/projects/to-do-list.JPG"
+                /></a>
+                <button class="tdl-info-button info-button">More Info</button>
+                <button class="tdl-back-button back-button">Back</button>
+              </div>
+              <div class="to-do-list-info project-info">
+                <p>
+                  A simple To Do List, where you can create the items, add items
+                  to your list and delete items from your list. Written using
+                  jQuery.
+                </p>
+              </div>
+              <p>ToDo List</p>
+            </div>
+            <div>
+              <div class="img-container">
+                <a href="https://poppan2.github.io/fashin-blog/" target="_blank"
+                  ><img
+                    class="project-photo moveUp fb-photo"
+                    id="project-two"
+                    src="./images/projects/fashion_photo.jpg"
+                /></a>
+                <button class="fb-info-button info-button">More Info</button>
+                <button class="fb-back-button back-button">Back</button>
+              </div>
+              <div class="fb-info project-info">
+                <p>A Simple HTML/CSS Webpage Set Up for fashion blog.</p>
+              </div>
+              <p>Fashin Blog HW</p>
+            </div>
+            <div>
+              <div class="img-container">
+                <a
+                  href="https://poppan2.github.io/random-imager/"
+                  target="_blank"
+                  ><img
+                    class="project-photo moveLeft ri-photo"
+                    id="project-three"
+                    src="./images/projects/random_imager.JPG"
+                /></a>
+                <button class="ri-info-button info-button">More Info</button>
+                <button class="ri-back-button back-button">Back</button>
+              </div>
+              <div class="ri-info project-info">
+                <p>Allow the user to add a random image to the screen.</p>
+              </div>
+              <p>Random Imager</p>
+            </div>
+          </div>
+          <div class="project-row-two">
+            <div>
+              <div class="img-container">
+                <a
+                  href="https://poppan2.github.io/final-fantasy-databse/"
+                  target="_blank"
+                  ><img
+                    class="project-photo moveRight ff-photo"
+                    src="./images//projects/ff-logo.png"
+                /></a>
+                <button class="ff-info-button info-button black-button">
+                  More Info
+                </button>
+                <button class="ff-back-button back-button">Back</button>
+              </div>
+              <div class="ff-info project-info">
+                <p>
+                  A Final Fantasy Database where the users can search for
+                  specific ff-caracters/monsers and games written using a third party API & React.
+                </p>
+              </div>
+              <p>Final Fantasy Database</p>
+            </div>
+            <div>
+              <div class="img-container">
+                <a
+                  ><img
+                    class="project-photo moveUp pc-photo"
+                    src="./images/projects/pokemon-project-react.JPG"
+                /></a>
+                <button class="pc-info-button info-button black-button">
+                  More Info
+                </button>
+                <button class="pc-back-button back-button">Back</button>
+              </div>
+              <div class="pc-info project-info">
+                <p>
+                  A Pokemon Cards game where the users can choose and save pokemons to their team written using pokemon API & React.
+                </p>
+              </div>
+              <p>Pokemon Cards</p>
+            </div>
+            <div>
+              <a
+                ><img
+                  class="project-photo moveLeft"
+                  src="https://picsum.photos/seed/two/150/150"
+              /></a>
+              <p>Project Name 5</p>
+            </div>
+          </div>
+        </section>
+      </main>
+      <!-- footer -->
+      <footer id="footer">
+        <div class="contact-me" id="contact">
+          <p class="contact-text">Please contact me at</p>
+          <p class="contact-text">ye_aung94@yahoo.com</p>
+        </div>
+        <div class="social-icons">
+          <a href="https://github.com/poppan2?tab=repositories" target="_blank"
+            ><i class="fab fa-github fa-3x icon"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/yeaung94/" target="_blank"
+            ><i class="fab fa-linkedin fa-3x icon"></i
+          ></a>
+        </div>
+      </footer>
+    </div>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
