took out extra period from about me section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="three-lines"></div>
           </div>
           <p>
-            I’m a passionate developer based in L.A. . I believe in the best
+            I’m a passionate developer based in L.A. I believe in the best
             user experience. Being creative and providing the best service to
             the customers is something I take pride in. I enjoy working with
             others, and believe in being a team player. Coming from a physical
