add alien invasion project

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
             <div class="three-lines"></div>
           </div>
           <p>
-            I’m a passionate developer based in L.A. I believe in the best
-            user experience. Being creative and providing the best service to
-            the customers is something I take pride in. I enjoy working with
-            others, and believe in being a team player. Coming from a physical
-            chemistry background has provided me with complex problem solving
-            skills, and critical thinking skills.
+            I’m a passionate developer based in L.A. I believe in the best user
+            experience. Being creative and providing the best service to the
+            customers is something I take pride in. I enjoy working with others,
+            and believe in being a team player. Coming from a physical chemistry
+            background has provided me with complex problem solving skills, and
+            critical thinking skills.
           </p>
         </div>
         <!-- Projects Section -->
@@ -212,7 +212,8 @@
               <div class="ff-info project-info">
                 <p>
                   A Final Fantasy Database where the users can search for
-                  specific ff-caracters/monsers and games written using a third party API & React.
+                  specific ff-caracters/monsers and games written using a third
+                  party API & React.
                 </p>
               </div>
               <p>Final Fantasy Database</p>
@@ -231,18 +232,31 @@
               </div>
               <div class="pc-info project-info">
                 <p>
-                  A Pokemon Cards game where the users can choose and save pokemons to their team written using pokemon API & React.
+                  A Pokemon Cards game where the users can choose and save
+                  pokemons to their team written using pokemon API & React.
                 </p>
               </div>
               <p>Pokemon Cards</p>
             </div>
             <div>
-              <a
-                ><img
-                  class="project-photo moveLeft"
-                  src="https://picsum.photos/seed/two/150/150"
-              /></a>
-              <p>Project Name 5</p>
+              <div class="img-container">
+                <a
+                  ><img
+                    class="project-photo moveLeft ai-photo"
+                    src="https://picsum.photos/seed/two/150/150"
+                /></a>
+                <button class="ai-info-button info-button black-button">
+                  More Info
+                </button>
+                <button class="ai-back-button back-button">Back</button>
+              </div>
+              <div class="ai-info project-info">
+                <p>
+                  A an Alien Invasion Game where a user controls the battleship
+                  and shoots down moving aliens. Written using Python (pygame)
+                </p>
+              </div>
+              <p>Alien Invasion Game</p>
             </div>
           </div>
         </section>
