modified last project

--- a/index.html
+++ b/index.html
@@ -161,19 +161,26 @@
             </div>
             <div>
               <div class="img-container">
-                <a href="https://poppan2.github.io/fashin-blog/" target="_blank"
+                <a
+                  href="https://mongomisfits.github.io/mad-libs-frontend/#/game-page"
+                  target="_blank"
                   ><img
-                    class="project-photo moveUp fb-photo"
+                    class="project-photo moveUp ml-photo"
                     id="project-two"
-                    src="./images/projects/fashion_photo.jpg"
+                    src="./images/projects/mad-libs.JPG"
                 /></a>
-                <button class="fb-info-button info-button">More Info</button>
-                <button class="fb-back-button back-button">Back</button>
+                <button class="ml-info-button info-button">More Info</button>
+                <button class="ml-back-button back-button">Back</button>
               </div>
-              <div class="fb-info project-info">
-                <p>A Simple HTML/CSS Webpage Set Up for fashion blog.</p>
+              <div class="ml-info project-info">
+                <p>
+                  Mad Libs, a word game where a user prompts for a list of words
+                  to substitute for blanks in a story; these word substitutions
+                  have a humorous effect when the resulting story is then read
+                  aloud.
+                </p>
               </div>
-              <p>Fashin Blog HW</p>
+              <p>Mad Libs</p>
             </div>
             <div>
               <div class="img-container">
@@ -240,10 +247,10 @@
             </div>
             <div>
               <div class="img-container">
-                <a
+                <a href="https://github.com/poppan2/alien-invasion" target="_blank"
                   ><img
                     class="project-photo moveLeft ai-photo"
-                    src="https://picsum.photos/seed/two/150/150"
+                    src="./images/projects/alien-invasion.jpg"
                 /></a>
                 <button class="ai-info-button info-button black-button">
                   More Info
